# AI-agent

./: .dockerignore  .env.example  .gitignore  pyproject.toml  test_browser.py
agent/: .gitignore  config.py  dependencies.py  llm.py  main.py  requirements.txt  tools.py
backend/: pyproject.toml  requirements.txt
backend/agent/: .env  config.py  dependencies.py  events.py  main.py
backend/agent/models/: agent.py
backend/agent/plugins/skills/: code_review.md  debugging.md  finance.md  test.md
backend/agent/prompts/: openhands.md
backend/agent/routers/: agent.py  health.py  thread_router.py
backend/agent/services/: agent_context.py  agent_service.py  llm.py
backend/agent/subagent/: finance.py
backend/agent/tools/: __init__.py  bash.py  bash.txt  code.py  code.txt  delete.py  delete.txt  editor.py  editor.txt  folder.py  folder.txt  grep.py  grep.txt  info.py  info.txt  list.py  list.txt  notify.py  read.py  read.txt  registry.py  search.py  search.txt  tree.py  tree.txt  write.py  write.txt
backend/agent/tools/apply_patch/: __init__.py  definition.py
backend/agent/tools/browser_use/: __init__.py  impl.py  recording.py
backend/agent/tools/delegate/: definition.py
backend/agent/tools/editor/: editor.py  impl.py
backend/agent/tools/glob/: __init__.py  definition.py
backend/agent/tools/grep/: definition.py
backend/agent/tools/run/: __init__.py
backend/agent/tools/terminal/: impl.py
backend/sandbox/: .env  README.md  config.py  dependencies.py  events.py  main.py  preview.py  workspace_manager.py
backend/sandbox/models/: execution.py  filesystem.py  terminal.py
backend/sandbox/routers/: file_system.py  health.py  run.py  terminal.py
backend/sandbox/scripts/: create_snapshot.py  delete_snapshot.py
backend/sandbox/services/: event_broadcaster.py  execution_service.py  file_cache.py  filesystem_service.py  jupyter_executor.py
backend/shared/: dependencies.py  workspace_manager.py
daytona_docs/: Code Execution.md  (+2 more)
(+132 files in other folders)
