[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox"
version = "0.1.0"
description = "sandbox project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daytona==0.149.0",
    "openhands-ai==1.4.0",
    "fastapi",
    "uvicorn",
    "httpx",
    "requests",
    "pydantic",
    "python-dotenv",
    "wsproto",
    "browser-use==0.11.13",
    "func-timeout",
    "bashlex",
    "langchain_huggingface",
    "langchain_community",
    "faiss-cpu",
    "langchain",
]

[tool.setuptools.packages.find]
include = ["agent*", "sandbox*"]
